--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,14 +1,15 @@
-# Copyright (C) 2007-2009 LuaDist.
+# Copyright (C) 2007-2012 LuaDist.
 # Created by Peter Kapec
 # Redistribution and use of this file is allowed according to the terms of the MIT license.
 # For details see the COPYRIGHT file distributed with LuaDist.
 # Please note that the package source code is licensed under its own license.
 
-PROJECT(luacontractor NONE)
-CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
-INCLUDE(dist.cmake)
+project ( luacontractor NONE )
+cmake_minimum_required ( VERSION 2.8 )
+include ( cmake/dist.cmake )
+include ( lua )
 
 # Install all files and documentation
-INSTALL (FILES lib/contractor.lua DESTINATION ${INSTALL_LMOD})
-INSTALL (FILES COPYRIGHT HISTORY README VERSION DESTINATION ${INSTALL_DATA})
-INSTALL (DIRECTORY examples/ DESTINATION ${INSTALL_EXAMPLE})
+install_lua_module ( contractor lib/contractor.lua )
+install_data ( COPYRIGHT HISTORY README )
+install_example ( examples/ )
